# codex-profiles-ui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  cx  install.sh  package.json
.github/workflows/: release.yml  security-audit.yml  tests.yml
checksums/: .gitkeep  v0.2.0.txt  v0.3.0.txt  v0.3.1-alpha.5.txt  v0.3.1.txt
docs/: verification.md
scripts/: check.sh  package-npm.sh  print-release-notes.sh  release-artifacts.sh  release-tag  verify-artifacts.sh
src/: auth.rs  cli.rs  common.rs  dashboard.rs  doctor.rs  json_response.rs  lib.rs  messages.rs  profiles.rs  requirements.rs  test_utils.rs  ui.rs  updates.rs  usage.rs
tests/: cli.rs  updates.rs  usage.rs
